this contains the capstone1 prject - updated with homepage

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="assets/js/popper.min.js"></script>
 </head>
-<body>
+<body id="landing">
 	<div class="jumbotron jumbotron-fluid text-center" id="landing-page">
-		<h1 class="display-4 teal animated zoomIn slower">R E L A X</h1>
+		<h1 class="display-4 baby-blue animated zoomIn slower">R E L A X</h1>
 		<p class="lead animated zoomIn slower delay-1s">Welcome to PhotoTravelling!</p>
 		<p class="animated zoomIn slower delay-2s">The website where you can immerse yourself with beautiful relaxing photos of sceneries you don't see eveyrday.</p>
 		<hr class="my-4 mx-5 bg-light">
@@ -26,7 +26,7 @@
 		<p class="animated zoomIn slower delay-4s">This website will help you out by browsing through our galleries of photos!</p>
 		</div>
 		<p class="animated zoomIn slower delay-5s">
-			<a class="btn btn-teal btn-lg" href="home.html" role="button">Start Photo Travelling Now</a>
+			<a class="btn btn-bb btn-lg" href="home.html" role="button">Start Photo Travelling Now</a>
 		</p>
 		<div class="animated fadeInUpBig slower delay-6s">
 		<small class="">Created by: Gerad Bobiles | 2018 &copy</small>
