--- a/home.html
+++ b/home.html
@@ -1,9 +1,112 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scake=1.0, maximum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE-Edge">
+	<link rel="stylesheet" type="text/css" href="assets/styles/animate.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
+
+	<title>Home Page</title>
+
+	<link rel="stylesheet" type="text/css" href="assets/styles/bootstrap.min.css">
+	<script type="text/javascript" src="assets/js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/js/popper.min.js"></script>
 </head>
-<body>
+<body id="body-orange">
+	<nav class="navbar navbar-expand-lg bg-orange navbar-light">
+		<a class="navbar-brand" href="index.html"><i class="fas fa-camera-retro"></i></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="home.html">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="about.html">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="contact.html">Contact Us</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="gallery.html">Gallery</a>
+				</li>
+			</ul>
+			<form class="form-inline my-2 my-lg-0">
+				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+				<button class="btn my-2 my-sm-0" id="bg-bb" type="submit">Search</button>
+			</form>
+		</div>
+	</nav>
+	<!-- end of nav -->
+	<div id="carouselExampleIndicators" class="carousel slide bg-orange" data-ride="carousel">
+		<ol class="carousel-indicators">
+			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+		</ol>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img class="d-block w-100" src="assets/images/slide-3.jpeg" alt="First slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="assets/images/slide-1.jpeg" alt="Second slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="assets/images/slide-2.jpg" alt="Third slide">
+			</div>
+		</div>
+		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
+	<!-- end of carousel -->
+	<div class="container-fluid bg-orange clearfix">
+		<div class="float-lg-left col-sm-12 col-lg-4 col-md-12 padding">
+			<div class="text-center btn-bb column">
+				<img src="assets/images/g1.jpg" class="rounded img-thumbnail" alt="thumbnail">
+				<h1>Peace</h1>
+				<figcaption class="mx-2 my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</figcaption>
+			</div>
+		</div>
+		<div class="float-lg-left col-sm-12 col-lg-4 col-md-12 padding">
+			<div class="text-center btn-bb column">
+				<img src="assets/images/g2.jpg" class="rounded img-thumbnail" alt="thumbnail">
+				<h1>Silence</h1>
+				<figcaption class="mx-2 my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</figcaption>
+			</div>
+		</div>
+		<div class="float-lg-left col-sm-12 col-lg-4 col-md-12 padding">
+			<div class="text-center btn-bb column">
+				<img src="assets/images/g3.jpg" class="rounded img-thumbnail" alt="thumbnail">
+				<h1>Beauty</h1>
+				<figcaption class="mx-2 my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</figcaption>
+			</div>
+		</div>
+	</div>
+	<!-- end of columns -->
+	<footer class="container-fluid bg-bb text-center vh">
+		<small>Gerald Bobiles | 2018 &copy</small>
+	</footer>
 
 </body>
 </html>
