this contains the updated capstone 1 with contact page

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="assets/js/popper.min.js"></script>
 </head>
-<body id="body-orange">
+<body>
 	<nav class="navbar navbar-expand-lg bg-orange navbar-light">
 		<a class="navbar-brand" href="index.html"><i class="fas fa-camera-retro"></i></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,35 +76,32 @@
 			<div class="text-center btn-bb column">
 				<img src="assets/images/g1.jpg" class="rounded img-thumbnail" alt="thumbnail">
 				<h1>Peace</h1>
-				<figcaption class="mx-2 my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat.</figcaption>
+				<figcaption class="mx-2 my-2">In a world where most people live in a busy and bustling cities, peace is almost nowhere to found, while chaos is everywhere. Take seat back and browse through our gallery to obtain that elusive peace.
+				</figcaption>
 			</div>
 		</div>
 		<div class="float-lg-left col-sm-12 col-lg-4 col-md-12 padding">
 			<div class="text-center btn-bb column">
 				<img src="assets/images/g2.jpg" class="rounded img-thumbnail" alt="thumbnail">
 				<h1>Silence</h1>
-				<figcaption class="mx-2 my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat.</figcaption>
+				<figcaption class="mx-2 my-2">Silence is the center of peace. When there is too much noise, there will be less peace. Meditation requires silence and that is because through silence you can get inner peace. With the help of our photos and a bit of your immagination, you can picture yourself standing in a silent but breathtaking place.</figcaption>
 			</div>
 		</div>
 		<div class="float-lg-left col-sm-12 col-lg-4 col-md-12 padding">
 			<div class="text-center btn-bb column">
 				<img src="assets/images/g3.jpg" class="rounded img-thumbnail" alt="thumbnail">
 				<h1>Beauty</h1>
-				<figcaption class="mx-2 my-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat.</figcaption>
+				<figcaption class="mx-2 my-2">Beauty can be found anywhere, you simply has to appreciate things around you, wether it is a scenery, weather, emotions or a thing, you'll see beauty from it. Take a look at our gallery, to see beauty like nothing else.</figcaption>
 			</div>
 		</div>
 	</div>
+	<!-- <div class="container-fluid" id="home-banner">
+		<div class="col-12 text-center">
+			<img class="img-fluid" src="assets/images/homebanner.jpg">
+		</div>
+	</div> -->
 	<!-- end of columns -->
-	<footer class="container-fluid bg-bb text-center vh">
+	<footer class="container-fluid bg-bb text-center">
 		<small>Gerald Bobiles | 2018 &copy</small>
 	</footer>
 
