--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div class="jumbotron jumbotron-fluid text-center" id="landing-page">
 		<h1 class="display-4 baby-blue animated zoomIn slower">R E L A X</h1>
 		<p class="lead animated zoomIn slower delay-1s">Welcome to PhotoTravelling!</p>
-		<p class="animated zoomIn slower delay-2s">The website where you can immerse yourself with beautiful relaxing photos of sceneries you don't see eveyrday.</p>
+		<p class="animated zoomIn slower delay-2s">The website where you can immerse yourself with beautiful relaxing photos of sceneries you don't see everyday.</p>
 		<hr class="my-4 mx-5 bg-light">
 		<p class="animated zoomIn slower delay-3s">Not everyone can travel anytime they want, so why don't you take a break for a second and imagine yourself somewhere beautiful.</p>
 		<div>
