this contains all the updated pages of capstone 1

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 				<li class="nav-item">
 					<a class="nav-link" href="about.html">About</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item active bg-bb rounded">
 					<a class="nav-link" href="contact.html">Contact Us</a>
 				</li>
 				<li class="nav-item">
@@ -48,11 +48,15 @@
 	<div class="container-fluid main-height text-center" id="contact-bg">
 		<main>
 			<div class=" container-fluid pt-3">
-				<img class="img-fluid" src="assets/images/banner-contact.jpg">
+				<h1>Contact Us</h1>
+				<hr class="my-3 bg-light">
 			</div>
 			<div class="row py-4 mx-auto">
+
 				<div class="col-lg-6 col-sm-12 col-md-12">
 					<form>
+						<img class="img-fluid pb-2" src="assets/images/banner-contact.jpg">
+
 						<div class="form-group">
 							<input type="text" class="form-control" id="InputUsername" placeholder=" Username">
 						</div>
@@ -90,7 +94,7 @@
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-12 col-sm-12 map-responsive">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3862.201694286414!2d121.0594766143876!3d14.530452682688436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9c919d3bf89%3A0x3d3fbc6aa8700f4f!2sGrace+Residences+Tower+4!5e0!3m2!1sen!2sph!4v1544437502914" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3862.201694286414!2d121.0594766143876!3d14.530452682688436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9c919d3bf89%3A0x3d3fbc6aa8700f4f!2sGrace+Residences+Tower+4!5e0!3m2!1sen!2sph!4v1544437502914" width="100%" height="482" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>		
 			</div>
 		</main>
