--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item">
+				<li class="nav-item active bg-bb rounded">
 					<a class="nav-link" href="home.html">Home</a>
 				</li>
 				<li class="nav-item">
@@ -71,10 +71,25 @@
 		</a>
 	</div>
 	<!-- end of carousel -->
+
+	<div>
+		<blockquote class="blockquote text-center py-5">
+			<p class="mb-0">If you want to conquer fear, don't sit home and think about it. Go out and get busy.</p>
+			<footer class="blockquote-footer">Dale Carnegie in <cite title="Source Title">BrainyQuote.com</cite></footer>
+		</blockquote>
+	</div>
+
+	<div class="container-fluid" id="parallax-banner">
+		<div class="col-12 text-center">
+			<img class="img-fluid mt-5" src="assets/images/homebanner.jpg">
+		</div>
+	</div>
+	<!-- end of parallax-banner -->
+
 	<div class="container-fluid bg-orange clearfix">
 		<div class="float-lg-left col-sm-12 col-lg-4 col-md-12 padding">
 			<div class="text-center btn-bb column">
-				<img src="assets/images/g1.jpg" class="rounded img-thumbnail" alt="thumbnail">
+				<img src="assets/images/g1.jpg" class="rounded img-thumbnail" alt="find peace">
 				<h1>Peace</h1>
 				<figcaption class="mx-2 my-2">In a world where most people live in a busy and bustling cities, peace is almost nowhere to found, while chaos is everywhere. Take seat back and browse through our gallery to obtain that elusive peace.
 				</figcaption>
@@ -82,25 +97,30 @@
 		</div>
 		<div class="float-lg-left col-sm-12 col-lg-4 col-md-12 padding">
 			<div class="text-center btn-bb column">
-				<img src="assets/images/g2.jpg" class="rounded img-thumbnail" alt="thumbnail">
+				<img src="assets/images/g2.jpg" class="rounded img-thumbnail" alt="silence is peace">
 				<h1>Silence</h1>
 				<figcaption class="mx-2 my-2">Silence is the center of peace. When there is too much noise, there will be less peace. Meditation requires silence and that is because through silence you can get inner peace. With the help of our photos and a bit of your immagination, you can picture yourself standing in a silent but breathtaking place.</figcaption>
 			</div>
 		</div>
 		<div class="float-lg-left col-sm-12 col-lg-4 col-md-12 padding">
 			<div class="text-center btn-bb column">
-				<img src="assets/images/g3.jpg" class="rounded img-thumbnail" alt="thumbnail">
+				<img src="assets/images/g3.jpg" class="rounded img-thumbnail" alt="life is beautiful">
 				<h1>Beauty</h1>
 				<figcaption class="mx-2 my-2">Beauty can be found anywhere, you simply has to appreciate things around you, wether it is a scenery, weather, emotions or a thing, you'll see beauty from it. Take a look at our gallery, to see beauty like nothing else.</figcaption>
 			</div>
 		</div>
 	</div>
-	<!-- <div class="container-fluid" id="home-banner">
-		<div class="col-12 text-center">
-			<img class="img-fluid" src="assets/images/homebanner.jpg">
-		</div>
-	</div> -->
 	<!-- end of columns -->
+
+	<div class="container-fluid" id="parallax-author">
+		<div class="col-lg-6 col-sm-12 col-md-12 text-left py-5 float-right container-fluid" id="author-bg">
+			<h1>About the dev:</h1>
+			<hr class="my-4 bg-light">
+			<p class="font-weight-bold">Gerald Bobiles, is a full stack, front end and back end dveloper. He wanted to make beautifully designed website that comes with strong functions. He believes that devs like him can change the world, one code at a time!</p>
+		</div>
+	</div>
+	<!-- end of author banner -->
+
 	<footer class="container-fluid bg-bb text-center">
 		<small>Gerald Bobiles | 2018 &copy</small>
 	</footer>
