--- a/about.html
+++ b/about.html
@@ -1,9 +1,98 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scake=1.0, maximum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE-Edge">
+	<link rel="stylesheet" type="text/css" href="assets/styles/animate.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
+
 	<title>About Us Page</title>
+
+	<link rel="stylesheet" type="text/css" href="assets/styles/bootstrap.min.css">
+	<script type="text/javascript" src="assets/js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/js/popper.min.js"></script>
+
 </head>
 <body>
+	<nav class="navbar navbar-expand-lg bg-orange navbar-light">
+		<a class="navbar-brand" href="index.html"><i class="fas fa-camera-retro"></i></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="home.html">Home</a>
+				</li>
+				<li class="nav-item active bg-bb rounded">
+					<a class="nav-link" href="about.html">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="contact.html">Contact Us</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="gallery.html">Gallery</a>
+				</li>
+			</ul>
+			<form class="form-inline my-2 my-lg-0">
+				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+				<button class="btn my-2 my-sm-0" id="bg-bb" type="submit">Search</button>
+			</form>
+		</div>
+	</nav>
+
+	<!-- end of nav -->
+
+	<main>
+
+		<div class="text-center py-4" id="parallax-about">
+			<div class="vertical-align container-fluid" id="about-bg">
+				<h1>About Us</h1>
+				<p>Understand the why behind the site | It's more than just a site, it's passion</p>
+			</div>
+		</div>
+		<div>
+			<blockquote class="blockquote text-center py-5">
+				<p class="mb-0">It always seem impossible until it is done.</p>
+				<footer class="blockquote-footer">Nelson Mandela in <cite title="Source Title">BrainyQuote.com</cite></footer>
+			</blockquote>
+			
+		</div>
+		<div class="text-left" id="parallax-mission">
+			<div class="vertical-align container-fluid" id="mission-bg">
+				<h1>Mission</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>	
+		</div>
+		<blockquote class="blockquote text-center py-5">
+				<p class="mb-0">A creative man is motivated by the desire to achieve, not by the desire to beat others.</p>
+				<footer class="blockquote-footer">Ayn Rand in <cite title="Source Title">BrainyQuote.com</cite></footer>
+			</blockquote>
+		<div class="text-left" id="parallax-vision">
+			<div class="vertical-align container-fluid" id="vision-bg">
+				<h1>Vission</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+		</div>
+	</main>
+
+	<footer class="container-fluid bg-bb text-center" id="footer">
+		<small>Gerald Bobiles | 2018 &copy</small>
+	</footer>
 
 </body>
 </html>
