--- a/gallery.html
+++ b/gallery.html
@@ -1,9 +1,158 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scake=1.0, maximum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE-Edge">
+	<link rel="stylesheet" type="text/css" href="assets/styles/animate.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
+
 	<title>Gallery Page</title>
+
+	<link rel="stylesheet" type="text/css" href="assets/styles/bootstrap.min.css">
+	<script type="text/javascript" src="assets/js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/js/popper.min.js"></script>
+
 </head>
 <body>
+	<nav class="navbar navbar-expand-lg bg-orange navbar-light">
+		<a class="navbar-brand" href="index.html"><i class="fas fa-camera-retro"></i></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="home.html">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="about.html">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="contact.html">Contact Us</a>
+				</li>
+				<li class="nav-item active bg-bb rounded">
+					<a class="nav-link" href="gallery.html">Gallery</a>
+				</li>
+			</ul>
+			<form class="form-inline my-2 my-lg-0">
+				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+				<button class="btn my-2 my-sm-0" id="bg-bb" type="submit">Search</button>
+			</form>
+		</div>
+	</nav>
+
+	<div class="text-center">
+		<h1>Gallery</h1>
+		<p>This is the highlight of the page | Come browse through these breathtaking images</p>
+	</div>
+	<div class="container-fluid main-height">
+		<div class="row">
+			<div class="col-4">
+				<a data-toggle="modal" data-target="#g1">
+					<img src="assets/images/prlx-dummy.jpg" alt="image1" class="img-thumbnail img-fluid">
+				</a>
+			</div>
+			<div class="col-4">
+				<a data-toggle="modal" data-target="#g1">
+					<img src="assets/images/prlx-dummy.jpg" alt="image1" class="img-thumbnail img-fluid">
+				</a>
+			</div>
+			<div class="col-4">
+				<a data-toggle="modal" data-target="#g1">
+					<img src="assets/images/prlx-dummy.jpg" alt="image1" class="img-thumbnail img-fluid">
+				</a>
+			</div>
+			<div class="col-4">
+				<a data-toggle="modal" data-target="#g1">
+					<img src="assets/images/prlx-dummy.jpg" alt="image1" class="img-thumbnail img-fluid">
+				</a>
+			</div>
+			<div class="col-4">
+				<a data-toggle="modal" data-target="#g1">
+					<img src="assets/images/prlx-dummy.jpg" alt="image1" class="img-thumbnail img-fluid">
+				</a>
+			</div>
+			<div class="col-4">
+				<a data-toggle="modal" data-target="#g1">
+					<img src="assets/images/prlx-dummy.jpg" alt="image1" class="img-thumbnail img-fluid">
+				</a>
+			</div>
+		</div>
+	</div>
+
+	<!-- modal -->
+	<div class="modal fade" id="g1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<img src="assets/images/prlx-dummy.jpg" alt="image1" class=" img-fluid">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal fade" id="g1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<img src="assets/images/prlx-dummy.jpg" alt="image1" class=" img-fluid">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal fade" id="g1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<img src="assets/images/prlx-dummy.jpg" alt="image1" class=" img-fluid">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal fade" id="g1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<img src="assets/images/prlx-dummy.jpg" alt="image1" class=" img-fluid">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal fade" id="g1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<img src="assets/images/prlx-dummy.jpg" alt="image1" class=" img-fluid">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal fade" id="g1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<img src="assets/images/prlx-dummy.jpg" alt="image1" class=" img-fluid">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal fade" id="g1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<img src="assets/images/prlx-dummy.jpg" alt="image1" class=" img-fluid">
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- end of modal -->
+
+	<footer class="container-fluid bg-bb text-center" id="footer">
+		<small>Gerald Bobiles | 2018 &copy</small>
+	</footer>
 </body>
 </html>
