This contains the files for capstone 1 with gallery

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg bg-orange navbar-light">
-		<a class="navbar-brand" href="index.html"><i class="fas fa-camera-retro"></i></a>
+		<a class="navbar-brand" href="index.html"><i class="fas fa-camera-retro" id="fas"></i></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -65,12 +65,7 @@
 		<div class="text-left" id="parallax-mission">
 			<div class="vertical-align container-fluid" id="mission-bg">
 				<h1>Mission</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Our mission is to help people relax and achieve peace right infront of their desk. Not everyone can travel but everyone has a computer, be it at work or at a cafe, you always have your computer with you (or smartphone). Our was built to help you travel places using your imagination by staring straight to our photos. Travelling requires time and money, viewing our sites only require your imagintaion. Don't limit yourself to what you can appreciate in your daily life!</p>
 			</div>	
 		</div>
 		<blockquote class="blockquote text-center py-5">
@@ -79,13 +74,8 @@
 			</blockquote>
 		<div class="text-left" id="parallax-vision">
 			<div class="vertical-align container-fluid" id="vision-bg">
-				<h1>Vission</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<h1>Vision</h1>
+				<p>We would like to see ourselves with thousands of beautiful photos of sceneries you don't see everyday. To see our site being recognize as a website that promotes healthy mentality and emotional intelligence. We also want to inspire others that you can enjoy life and make these photos be your inspiration to travel the world not be afraid!</p>
 			</div>
 		</div>
 	</main>
