--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg bg-orange navbar-light">
-		<a class="navbar-brand" href="index.html"><i class="fas fa-camera-retro"></i></a>
+		<a class="navbar-brand" href="index.html"><i class="fas fa-camera-retro" id="fas"></i></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
