--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg bg-orange navbar-light">
-		<a class="navbar-brand" href="index.html"><i class="fas fa-camera-retro"></i></a>
+		<a class="navbar-brand" href="index.html"><i class="fas fa-camera-retro" id="fas"></i></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -58,7 +58,7 @@
 				<img class="d-block w-100" src="assets/images/slide-1.jpeg" alt="Second slide">
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100" src="assets/images/slide-2.jpg" alt="Third slide">
+				<img class="d-block w-100" src="assets/images/slide-2.jpeg" alt="Third slide">
 			</div>
 		</div>
 		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -80,8 +80,8 @@
 	</div>
 
 	<div class="container-fluid" id="parallax-banner">
-		<div class="col-12 text-center">
-			<img class="img-fluid mt-5" src="assets/images/homebanner.jpg">
+		<div class="col-12 text-center vertical-align">
+			<img class="img-fluid" src="assets/images/homebanner.jpg">
 		</div>
 	</div>
 	<!-- end of parallax-banner -->
@@ -113,7 +113,7 @@
 	<!-- end of columns -->
 
 	<div class="container-fluid" id="parallax-author">
-		<div class="col-lg-6 col-sm-12 col-md-12 text-left py-5 float-right container-fluid" id="author-bg">
+		<div class="col-lg-6 col-sm-12 col-md-12 text-left py-5 float-right container-fluid rounded	" id="author-bg">
 			<h1>About the dev:</h1>
 			<hr class="my-4 bg-light">
 			<p class="font-weight-bold">Gerald Bobiles, is a full stack, front end and back end dveloper. He wanted to make beautifully designed website that comes with strong functions. He believes that devs like him can change the world, one code at a time!</p>
