this contains the pre final version of capstone 1

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/styles/animate.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
+	<link rel="icon" href="assets/images/favicon.ico" type="image/gif" sizes="16x16">
 
 	<title>About Us Page</title>
 
@@ -56,7 +57,7 @@
 			</div>
 		</div>
 		<div>
-			<blockquote class="blockquote text-center py-5">
+			<blockquote class="blockquote text-center py-5" id="blockquote-2">
 				<p class="mb-0">It always seem impossible until it is done.</p>
 				<footer class="blockquote-footer">Nelson Mandela in <cite title="Source Title">BrainyQuote.com</cite></footer>
 			</blockquote>
@@ -68,7 +69,7 @@
 				<p>Our mission is to help people relax and achieve peace right infront of their desk. Not everyone can travel but everyone has a computer, be it at work or at a cafe, you always have your computer with you (or smartphone). Our was built to help you travel places using your imagination by staring straight to our photos. Travelling requires time and money, viewing our sites only require your imagintaion. Don't limit yourself to what you can appreciate in your daily life!</p>
 			</div>	
 		</div>
-		<blockquote class="blockquote text-center py-5">
+		<blockquote class="blockquote text-center py-5" id="blockquote-3">
 				<p class="mb-0">A creative man is motivated by the desire to achieve, not by the desire to beat others.</p>
 				<footer class="blockquote-footer">Ayn Rand in <cite title="Source Title">BrainyQuote.com</cite></footer>
 			</blockquote>
