--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/styles/animate.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
+	<link rel="icon" href="assets/images/favicon.ico" type="image/gif" sizes="16x16">
 
 	<title>Contact Page</title>
 
@@ -48,7 +49,7 @@
 	<div class="container-fluid main-height text-center" id="contact-bg">
 		<main>
 			<div class=" container-fluid pt-3">
-				<h1>Contact Us</h1>
+				<h1>Contact Us <i class="fas fa-comment-alt"></i></h1>
 				<hr class="my-3 bg-light">
 			</div>
 			<div class="row py-4 mx-auto">
