--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/styles/animate.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
+	<link rel="icon" href="assets/images/favicon.ico" type="image/gif" sizes="16x16">
 
 	<title>Home Page</title>
 
@@ -73,7 +74,7 @@
 	<!-- end of carousel -->
 
 	<div>
-		<blockquote class="blockquote text-center py-5">
+		<blockquote class="blockquote text-center py-5" id="blockquote-4">
 			<p class="mb-0">If you want to conquer fear, don't sit home and think about it. Go out and get busy.</p>
 			<footer class="blockquote-footer">Dale Carnegie in <cite title="Source Title">BrainyQuote.com</cite></footer>
 		</blockquote>
