This contains the final version (v1.0) of my capstone 1

--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
 	<link rel="icon" href="assets/images/favicon.ico" type="image/gif" sizes="16x16">
+	<link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+
 
 	<title>About Us Page</title>
 
@@ -50,9 +52,9 @@
 
 	<main>
 
-		<div class="text-center py-4" id="parallax-about">
+		<div class="text-center" id="parallax-about">
 			<div class="vertical-align container-fluid" id="about-bg">
-				<h1>About Us</h1>
+				<h1 class="font-1">About Us</h1>
 				<p>Understand the why behind the site | It's more than just a site, it's passion</p>
 			</div>
 		</div>
@@ -65,7 +67,7 @@
 		</div>
 		<div class="text-left" id="parallax-mission">
 			<div class="vertical-align container-fluid" id="mission-bg">
-				<h1>Mission</h1>
+				<h1 class="font-1">Mission</h1>
 				<p>Our mission is to help people relax and achieve peace right infront of their desk. Not everyone can travel but everyone has a computer, be it at work or at a cafe, you always have your computer with you (or smartphone). Our was built to help you travel places using your imagination by staring straight to our photos. Travelling requires time and money, viewing our sites only require your imagintaion. Don't limit yourself to what you can appreciate in your daily life!</p>
 			</div>	
 		</div>
@@ -75,7 +77,7 @@
 			</blockquote>
 		<div class="text-left" id="parallax-vision">
 			<div class="vertical-align container-fluid" id="vision-bg">
-				<h1>Vision</h1>
+				<h1 class="font-1">Vision</h1>
 				<p>We would like to see ourselves with thousands of beautiful photos of sceneries you don't see everyday. To see our site being recognize as a website that promotes healthy mentality and emotional intelligence. We also want to inspire others that you can enjoy life and make these photos be your inspiration to travel the world not be afraid!</p>
 			</div>
 		</div>
