--- a/home.html
+++ b/home.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
 	<link rel="icon" href="assets/images/favicon.ico" type="image/gif" sizes="16x16">
+	<link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+
 
 	<title>Home Page</title>
 
@@ -81,8 +83,10 @@
 	</div>
 
 	<div class="container-fluid" id="parallax-banner">
-		<div class="col-12 text-center vertical-align">
-			<img class="img-fluid" src="assets/images/homebanner.jpg">
+		<div class="col-12 text-center vertical-align" id="home">
+			<!-- <img class="img-fluid" src="assets/images/homebanner.jpg"> --><h1 class="font-1 text-light">Welcome Home</h1>
+			<hr class="my-3 bg-light">
+			<p class="text-light">Please enjoy travelling around the website!</p>
 		</div>
 	</div>
 	<!-- end of parallax-banner -->
@@ -91,7 +95,7 @@
 		<div class="float-lg-left col-sm-12 col-lg-4 col-md-12 padding">
 			<div class="text-center btn-bb column">
 				<img src="assets/images/g1.jpg" class="rounded img-thumbnail" alt="find peace">
-				<h1>Peace</h1>
+				<h1 class="font-1">Peace</h1>
 				<figcaption class="mx-2 my-2">In a world where most people live in a busy and bustling cities, peace is almost nowhere to found, while chaos is everywhere. Take seat back and browse through our gallery to obtain that elusive peace.
 				</figcaption>
 			</div>
@@ -99,14 +103,14 @@
 		<div class="float-lg-left col-sm-12 col-lg-4 col-md-12 padding">
 			<div class="text-center btn-bb column">
 				<img src="assets/images/g2.jpg" class="rounded img-thumbnail" alt="silence is peace">
-				<h1>Silence</h1>
+				<h1 class="font-1">Silence</h1>
 				<figcaption class="mx-2 my-2">Silence is the center of peace. When there is too much noise, there will be less peace. Meditation requires silence and that is because through silence you can get inner peace. With the help of our photos and a bit of your immagination, you can picture yourself standing in a silent but breathtaking place.</figcaption>
 			</div>
 		</div>
 		<div class="float-lg-left col-sm-12 col-lg-4 col-md-12 padding">
 			<div class="text-center btn-bb column">
 				<img src="assets/images/g3.jpg" class="rounded img-thumbnail" alt="life is beautiful">
-				<h1>Beauty</h1>
+				<h1 class="font-1">Beauty</h1>
 				<figcaption class="mx-2 my-2">Beauty can be found anywhere, you simply has to appreciate things around you, wether it is a scenery, weather, emotions or a thing, you'll see beauty from it. Take a look at our gallery, to see beauty like nothing else.</figcaption>
 			</div>
 		</div>
@@ -115,7 +119,7 @@
 
 	<div class="container-fluid" id="parallax-author">
 		<div class="col-lg-6 col-sm-12 col-md-12 text-left py-5 float-right container-fluid rounded	" id="author-bg">
-			<h1>About the dev:</h1>
+			<h1 class="font-1">About the dev:</h1>
 			<hr class="my-4 bg-light">
 			<p class="font-weight-bold">Gerald Bobiles, is a full stack, front end and back end dveloper. He wanted to make beautifully designed website that comes with strong functions. He believes that devs like him can change the world, one code at a time!</p>
 		</div>
