--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
 	<link rel="icon" href="assets/images/favicon.ico" type="image/gif" sizes="16x16">
+	<link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+
 
 	<title>Contact Page</title>
 
@@ -49,7 +51,7 @@
 	<div class="container-fluid main-height text-center" id="contact-bg">
 		<main>
 			<div class=" container-fluid pt-3">
-				<h1>Contact Us <i class="fas fa-comment-alt"></i></h1>
+				<h1 class="font-1">Contact Us <i class="fas fa-comment-alt"></i></h1>
 				<hr class="my-3 bg-light">
 			</div>
 			<div class="row py-4 mx-auto">
@@ -78,12 +80,12 @@
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-									<h5 class="modal-title" id="submitmodalLabel">This page is Under Construction</h5>
+									<h5 class="modal-title text-warning" id="submitmodalLabel">This page is Under Construction</h5>
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 										<span aria-hidden="true">&times;</span>
 									</button>
 								</div>
-								<div class="modal-body">
+								<div class="modal-body text-dark">
 									Submit button not yet working, please contact me directly at geraldbobiles@gmail.com
 								</div>
 								<div class="modal-footer">
