--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
 	<link rel="icon" href="assets/images/favicon.ico" type="image/gif" sizes="16x16">
+	<link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+
 
 	<title>Gallery Page</title>
 
@@ -51,7 +53,7 @@
 	<div class="main-height">
 		<div class="text-center" id="gal-bg">
 			<div class="vertical-align">
-				<h1>Gallery</h1>
+				<h1 class="font-1">Gallery</h1>
 				<p>This is the highlight of the page | Come browse through these breathtaking images</p>
 			</div>
 		</div>
