this contains v1.2 of the capstone 1 with better branding

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 		</div>
 		<div>
 			<blockquote class="blockquote text-center py-5" id="blockquote-2">
-				<p class="mb-0">It always seem impossible until it is done.</p>
+				<p class="mb-0 px-2">It always seem impossible until it is done.</p>
 				<footer class="blockquote-footer">Nelson Mandela in <cite title="Source Title">BrainyQuote.com</cite></footer>
 			</blockquote>
 			
@@ -72,7 +72,7 @@
 			</div>	
 		</div>
 		<blockquote class="blockquote text-center py-5" id="blockquote-3">
-				<p class="mb-0">A creative man is motivated by the desire to achieve, not by the desire to beat others.</p>
+				<p class="mb-0 px-2">A creative man is motivated by the desire to achieve, not by the desire to beat others.</p>
 				<footer class="blockquote-footer">Ayn Rand in <cite title="Source Title">BrainyQuote.com</cite></footer>
 			</blockquote>
 		<div class="text-left" id="parallax-vision">
