--- a/gallery.html
+++ b/gallery.html
@@ -59,7 +59,7 @@
 		</div>
 		<div>
 			<blockquote class="blockquote text-center py-5" id="blockquote-1">
-				<p class="mb-0">Don't watch the clock; do what it does. Keep going.</p>
+				<p class="mb-0 px-2">Don't watch the clock; do what it does. Keep going.</p>
 				<footer class="blockquote-footer">Sam Levenson in <cite title="Source Title">BrainyQuote.com</cite></footer>
 			</blockquote>
 			
