--- a/home.html
+++ b/home.html
@@ -77,16 +77,15 @@
 
 	<div>
 		<blockquote class="blockquote text-center py-5" id="blockquote-4">
-			<p class="mb-0">If you want to conquer fear, don't sit home and think about it. Go out and get busy.</p>
+			<p class="mb-0 px-2">If you want to conquer fear, don't sit home and think about it. Go out and get busy.</p>
 			<footer class="blockquote-footer">Dale Carnegie in <cite title="Source Title">BrainyQuote.com</cite></footer>
 		</blockquote>
 	</div>
-
 	<div class="container-fluid" id="parallax-banner">
-		<div class="col-12 text-center vertical-align" id="home">
-			<!-- <img class="img-fluid" src="assets/images/homebanner.jpg"> --><h1 class="font-1 text-light">Welcome Home</h1>
+		<div class="col-12 text-center vertical-align mt-0" id="home">
+			<h1 class="font-1 text-light">PhotoTravelling</h1>
 			<hr class="my-3 bg-light">
-			<p class="text-light">Please enjoy travelling around the website!</p>
+			<p class="text-light">Tavel in your desk! Travel in your palm!</p>
 		</div>
 	</div>
 	<!-- end of parallax-banner -->
